--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ objc = "0.2.7"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.63"
 wasm-bindgen = "0.2.86"
+bytemuck = { version = "1.12.3" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
 version = "0.3.55"
